<resources>
    <string name="app_name">gfastandroid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="introduza_o_email">Introduza o Email</string>
    <string name="login">Login</string>
    <string name="invalido">Email invalido!</string>
    <string name="passinvalida">Password inválida</string>
    <string name="ver_detalhes_din_mico">Ver Detalhes(Dinâmico)</string>
    <string name="enviar_email">Enviar Email</string>
    <string name="detalhes_estatico">Ver Detalhes(Estático)</string>
    <string name="estatico">Ver detalhes(Estatico)</string>
    <string name="titulo">Titulo:</string>
    <string name="textview">TextView</string>
    <string name="s_rie">Série:</string>
    <string name="ver_detalhes_est_tico">Ver detalhes (Estático)</string>
    <string name="tituloAMSI">Programar Android em AMSI</string>
    <string name="android_saga">Android Saga</string>
    <string name="anoestatico">2019</string>
    <string name="equipa_amsi">Equipa de AMSI</string>
    <string name="dinamicos">Dados Dinâmicos</string>
    <string name="livro_lista">Livro Lista </string>
    <string name="livro_Grelha">Livro Grelha</string>
    <string name="comunicar">Comunicar</string>

    <string name="email_email_pt">email@email.pt</string>
    <string name="ndClose">Aberto</string>
    <string name="ndOpen">Fechado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="t_tulo">Título</string>
    <string name="s_rie_serie">Série</string>
    <string name="autor">Autor</string>
    <string name="ano">Ano</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="remover_livro">Remover Livro</string>

</resources>