<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior ="single">
        <item android:title="@string/livro_lista"
            android:id="@+id/navEstatico"
            android:icon="@drawable/ic_menu_estatico"
            />
        <item android:title="@string/livro_Grelha"
            android:id="@+id/navDinamico"
            android:icon="@drawable/ic_menu_dinamico"
            />
    </group>
    <item android:title="@string/comunicar" >
        <menu >
            <item
                android:id="@+id/navEmail"
                android:title="@string/email"
                android:icon="@drawable/ic_menu_email"/>
        </menu>
    </item>
</menu>