<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Bem Vindo!!"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#AC0788"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/etmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/email"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnestatico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:backgroundTint="#087C8C"
        android:onClick="onClickDetalhesEstatico"
        android:text="@string/ver_detalhes_est_tico"
        android:textColorLink="#DA0000" />

    <Button
        android:id="@+id/btndinamico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:backgroundTint="#087C8C"
        android:onClick="onClickDetalhesDinamico"
        android:text="@string/ver_detalhes_din_mico"
        android:textAlignment="center"
        tools:text="@string/ver_detalhes_din_mico" />

    <Button
        android:id="@+id/btnemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:backgroundTint="#087C8C"
        android:onClick="onClickEnviarEmail"
        android:text="@string/enviar_email" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_weight="0" />

</LinearLayout>